# FastAPI

./: .env.template  .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_12_08_2312-61da24021c33_initial_migration.py  2025_01_14_1747-374bbb5969df_create_teams_players_injuries.py
api/: __init__.py
api/api_v1/: __init__.py  constants.py  crud.py  views.py
api/api_v1/injuries/: crud.py  schemas.py  views.py
api/api_v1/players/: crud.py  schemas.py  views.py
api/api_v1/teams/: crud.py  schemas.py  views.py
core/: config.py  db_helper.py
core/models/: __init__.py  base.py  db_helper.py  injury.py  mixins.py  player.py  team.py
core/models/mixins/: name.py  timestamp.py
injuries/: schemas.py
injury/: models.py
players/: crud.py  models.py  schemas.py  views.py
teams/: crud.py  models.py  schemas.py  views.py
